[package]
name = "mydrvier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.0"
libc = "0.2"
socket = "0.0.7"
winapi = {version = "0.3.9", features =["minwindef"] }


[build]
rustc-link-lib = ["vpcd"]
rustc-link-search = ["/path/to/foo"]
